# NekoBot

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  clean_pycache.py  docker-compose.yaml  main.py  pyproject.toml  test_platform_api.py
.claude/: settings.local.json
.sisyphus/: boulder.json
.sisyphus/plans/: onebot-v11-bootstrap.md
.trae/documents/: NekoBot 项目优化计划.md  更新 NekoBot README 文档.md
dashboard/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
dashboard/src/: App.css  App.tsx  index.css
dashboard/src/components/Layout/: Layout.tsx
dashboard/src/components/Sidebar/: Sidebar.tsx
dashboard/src/components/TopNav/: TopNav.tsx
dashboard/src/context/: AuthContext.tsx  useAuth.ts
dashboard/src/pages/BotSettings/: BotSettings.tsx
dashboard/src/pages/ChangePassword/: ChangePassword.tsx
dashboard/src/pages/Dashboard/: Dashboard.tsx
dashboard/src/pages/LLM/: LLM.tsx
dashboard/src/pages/Login/: Login.tsx
dashboard/src/pages/MCP/: MCP.tsx
dashboard/src/pages/Personalities/: Personalities.tsx
dashboard/src/pages/Plugins/: Plugins.tsx
dashboard/src/pages/Settings/: Settings.tsx
dashboard/src/utils/: api.ts
data/: config.example.json
docs/: AstrBot_vs_NekoBot_对比报告.md  AstrBot_vs_NekoBot_源码级对比报告.md  CONFIG_EDITOR_GUIDE.md  INTEGRATION_GUIDE.md
tests/: __init__.py  check_imports.py  import_checker.py  run_checker.py  test_hot_reload.py  test_llm_providers.py  test_platform_adapters.py
tests/app/: test_provider_request_building.py
tests/bootstrap/: test_app_config.py  test_config_manager.py  test_crypto.py  test_main_bootstrap.py  test_main_entry.py
tests/conversations/: test_configuration_context.py  test_persistence.py  test_resolver.py
tests/llm/: test_llm_handler.py
tests/moderation/: test_service.py
tests/permissions/: test_engine.py
tests/plugins/: _fixture_plugin.py  test_command_dispatch.py  test_plugin_manager.py
tests/providers/: test_registry.py  test_sources_anthropic_gemini.py  test_sources_openai_like.py
tests/routers/: test_auth_store.py
tests/runtime/: test_dispatch_registry.py  test_plugin_binding.py
tests/schema/: test_fields.py
tests/tests/outputs/: import_status_report.txt
tests/utils/: test_url_guard.py
