[project]
name = "nekobot"
version = "0.1.0"
description = "多平台 AI 机器人框架"
readme = "README.md"
license = "AGPL-3.0"
requires-python = ">=3.13"
authors = [
    { name = "初然Neko", email = "churanneko@outlook.com" },
]
dependencies = [
    "aiohttp>=3.13.3",
    "anthropic>=0.86.0",
    "google-genai>=1.68.0",
    "loguru>=0.7.0",
    "openai>=2.29.0",
    "pyyaml>=6.0.3",
    "quart>=0.20.0",
    "mcp>=1.6.0",
    "watchfiles>=1.1.1",
    "bcrypt>=5.0.0",
    "cryptography>=44.0.0",
    "aiosqlite>=0.22.1",
    "pyjwt>=2.12.1",
]

[dependency-groups]
dev = [
    "basedpyright>=1.38.3",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.6",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.setuptools.packages.find]
include = ["packages*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
pythonpath = ["."]
